Implemented Dark Mode Created new values folder for dark mode Fixed some bugs

--- a/app/src/main/res/drawable/ic_instagram.xml
+++ b/app/src/main/res/drawable/ic_instagram.xml
@@ -1,68 +1,12 @@
-<vector android:height="80dp" android:viewportHeight="512.00037"
-    android:viewportWidth="512" android:width="80dp"
-    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:pathData="m503.234,91.578c-4.66,-43.664 -39.145,-78.156 -82.813,-82.813 -109.508,-11.688 -219.336,-11.688 -328.84,0 -43.668,4.66 -78.156,39.148 -82.816,82.813 -11.688,109.504 -11.688,219.336 0,328.84 4.66,43.668 39.148,78.156 82.813,82.816 109.504,11.688 219.336,11.688 328.844,0 43.668,-4.66 78.152,-39.148 82.813,-82.816 11.688,-109.504 11.688,-219.332 0,-328.84zM503.234,91.578">
-        <aapt:attr name="android:fillColor">
-            <gradient android:centerX="104.95712"
-                android:centerY="447.44742"
-                android:gradientRadius="564.6459" android:type="radial">
-                <item android:color="#FFFAE100" android:offset="0"/>
-                <item android:color="#FFFADC04" android:offset="0.0544"/>
-                <item android:color="#FFFBCE0E" android:offset="0.1167"/>
-                <item android:color="#FFFCB720" android:offset="0.1829"/>
-                <item android:color="#FFFE9838" android:offset="0.2514"/>
-                <item android:color="#FFFF7950" android:offset="0.3054"/>
-                <item android:color="#FFFF1C74" android:offset="0.4922"/>
-                <item android:color="#FF6C1CD1" android:offset="1"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path android:pathData="m475.387,110.098c-4.133,-38.746 -34.734,-69.352 -73.484,-73.488 -97.172,-10.367 -194.633,-10.367 -291.805,0 -38.746,4.137 -69.352,34.742 -73.488,73.488 -10.367,97.172 -10.367,194.633 0,291.801 4.137,38.75 34.742,69.355 73.488,73.488 97.172,10.371 194.633,10.371 291.801,0 38.75,-4.133 69.355,-34.738 73.488,-73.488 10.371,-97.168 10.371,-194.629 0,-291.801zM475.387,110.098">
-        <aapt:attr name="android:fillColor">
-            <gradient android:endX="-671.0159" android:endY="-265.4464"
-                android:startX="196.37265" android:startY="222.45967" android:type="linear">
-                <item android:color="#00A1B5D8" android:offset="0"/>
-                <item android:color="#4F90A2BD" android:offset="0.3094"/>
-                <item android:color="#C17C8B9C" android:offset="0.7554"/>
-                <item android:color="#FF748290" android:offset="1"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path android:pathData="m7.672,409.805c0.352,3.539 0.715,7.078 1.094,10.617 4.66,43.664 39.148,78.152 82.816,82.813 109.504,11.688 219.336,11.688 328.84,0 43.668,-4.66 78.152,-39.148 82.813,-82.813 0.379,-3.539 0.742,-7.078 1.098,-10.617zM7.672,409.805">
-        <aapt:attr name="android:fillColor">
-            <gradient android:endX="256.0003" android:endY="531.774"
-                android:startX="256.0003" android:startY="451.9661" android:type="linear">
-                <item android:color="#00FAE100" android:offset="0"/>
-                <item android:color="#4DFCA800" android:offset="0.3068"/>
-                <item android:color="#A0FE7300" android:offset="0.6275"/>
-                <item android:color="#DDFF5200" android:offset="0.8685"/>
-                <item android:color="#FFFF4500" android:offset="1"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path android:pathData="m503.234,420.418c6.281,-58.84 9.18,-117.773 8.711,-176.699l-117.031,-117.031c-14.621,-16.691 -35.977,-27.109 -61.07,-28.012 -51.605,-1.859 -103.375,-1.766 -154.988,0.008 -42.867,1.477 -72.844,30.289 -80.531,72.637 -1.355,7.477 -2.168,15.051 -3.234,22.582v124.148c0.59,4.023 1.457,8.027 1.727,12.074 1.719,25.758 12.305,47.82 29.254,62.746l119.094,119.09c58.445,0.41 116.895,-2.496 175.258,-8.727 43.668,-4.66 78.152,-39.148 82.813,-82.816zM503.234,420.418"/>
-    <path android:pathData="m503.234,420.422c-4.656,43.66 -39.152,78.156 -82.813,82.813 -58.355,6.227 -116.816,9.137 -175.254,8.727l-118.914,-118.914c13.785,12.066 31.754,19.414 52.605,20.199 51.602,1.938 103.383,1.887 154.984,0.027 46.672,-1.688 80.445,-36.23 81.902,-82.902 1.555,-49.555 1.555,-99.238 0,-148.793 -0.664,-21.531 -8.223,-40.477 -20.754,-54.813l116.957,116.957c0.461,58.918 -2.438,117.859 -8.715,176.699zM503.234,420.422"/>
-    <path android:pathData="m316.414,200.559c-14.992,-16.324 -36.504,-26.566 -60.414,-26.566 -45.289,0 -82.008,36.719 -82.008,82.008 0,23.91 10.242,45.422 26.566,60.414l189.738,189.738c10.043,-0.875 20.086,-1.848 30.121,-2.918 43.668,-4.66 78.156,-39.148 82.816,-82.816 1.07,-10.035 2.043,-20.078 2.918,-30.121zM316.414,200.559"/>
-    <path android:pathData="m511.008,311.152 l-152.703,-152.699c-3.563,-4.676 -9.176,-7.711 -15.508,-7.711 -10.773,0 -19.512,8.734 -19.512,19.512 0,6.332 3.035,11.945 7.711,15.508l177.281,177.285c1.203,-17.293 2.113,-34.594 2.73,-51.895zM511.008,311.152"/>
-    <path android:pathData="m95.09,193.902c1.066,-7.531 1.879,-15.105 3.234,-22.582 7.684,-42.348 37.664,-71.16 80.531,-72.637 51.613,-1.773 103.383,-1.867 154.988,-0.008 46.656,1.68 80.445,36.227 81.902,82.898 1.551,49.559 1.551,99.238 0,148.797 -1.457,46.672 -35.234,81.215 -81.898,82.898 -51.605,1.863 -103.387,1.91 -154.988,-0.027 -46.664,-1.754 -78.922,-36.379 -82.043,-83.121 -0.27,-4.043 -1.137,-8.051 -1.727,-12.074 0,-41.383 0,-82.766 0,-124.145zM256.043,385.609c23.617,0 47.258,0.707 70.844,-0.164 36.98,-1.371 59.727,-23.441 60.59,-60.387 1.07,-46.035 1.07,-92.133 0,-138.172 -0.863,-36.938 -23.625,-59.523 -60.59,-60.309 -46.918,-0.992 -93.887,-0.984 -140.805,0 -36.684,0.77 -59.496,22.898 -60.492,59.43 -1.266,46.617 -1.266,93.316 0,139.934 0.996,36.527 23.809,58.145 60.496,59.504 23.289,0.867 46.637,0.164 69.957,0.164zM256.043,385.609">
-        <aapt:attr name="android:fillColor">
-            <gradient android:endX="150.54262" android:endY="362.16516"
-                android:startX="357.65823" android:startY="155.04953" android:type="linear">
-                <item android:color="#FF833AB4" android:offset="0"/>
-                <item android:color="#FF9C3495" android:offset="0.0922"/>
-                <item android:color="#FFDC2546" android:offset="0.2927"/>
-                <item android:color="#FFFD1D1D" android:offset="0.392"/>
-                <item android:color="#FFFC6831" android:offset="0.5589"/>
-                <item android:color="#FFFC9B40" android:offset="0.6887"/>
-                <item android:color="#FFFCAF45" android:offset="0.7521"/>
-                <item android:color="#FFFDB750" android:offset="0.7806"/>
-                <item android:color="#FFFECB6A" android:offset="0.8656"/>
-                <item android:color="#FFFFD87A" android:offset="0.9415"/>
-                <item android:color="#FFFFDC80" android:offset="1"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path android:fillColor="#fff" android:pathData="m95.09,193.902c1.066,-7.531 1.879,-15.105 3.234,-22.582 7.684,-42.348 37.664,-71.16 80.531,-72.637 51.613,-1.773 103.383,-1.867 154.988,-0.008 46.656,1.68 80.445,36.227 81.902,82.898 1.551,49.559 1.551,99.238 0,148.797 -1.457,46.672 -35.234,81.215 -81.898,82.898 -51.605,1.863 -103.387,1.91 -154.988,-0.027 -46.664,-1.754 -78.922,-36.379 -82.043,-83.121 -0.27,-4.043 -1.137,-8.051 -1.727,-12.074 0,-41.383 0,-82.766 0,-124.145zM256.043,385.609c23.617,0 47.258,0.707 70.844,-0.164 36.98,-1.371 59.727,-23.441 60.59,-60.387 1.07,-46.035 1.07,-92.133 0,-138.172 -0.863,-36.938 -23.625,-59.523 -60.59,-60.309 -46.918,-0.992 -93.887,-0.984 -140.805,0 -36.684,0.77 -59.496,22.898 -60.492,59.43 -1.266,46.617 -1.266,93.316 0,139.934 0.996,36.527 23.809,58.145 60.496,59.504 23.289,0.867 46.637,0.164 69.957,0.164zM256.043,385.609"/>
-    <path android:fillColor="#fff" android:pathData="m256,173.996c-45.289,0 -82.008,36.715 -82.008,82.004 0,45.293 36.719,82.008 82.008,82.008 45.293,0 82.008,-36.715 82.008,-82.008 0,-45.289 -36.715,-82.004 -82.008,-82.004zM256,309.773c-29.699,0 -53.773,-24.074 -53.773,-53.773s24.074,-53.773 53.773,-53.773 53.773,24.074 53.773,53.773 -24.074,53.773 -53.773,53.773zM256,309.773"/>
-    <path android:fillColor="#fff" android:pathData="m362.305,170.254c0,10.773 -8.734,19.508 -19.508,19.508s-19.512,-8.734 -19.512,-19.508c0,-10.777 8.738,-19.512 19.512,-19.512s19.508,8.734 19.508,19.512zM362.305,170.254"/>
+<vector android:height="20dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#795548" android:pathData="M512,74.667V160H0V74.667C0,33.429 33.429,0 74.667,0h362.667C478.571,0 512,33.429 512,74.667L512,74.667z"/>
+    <path android:fillColor="#BDBDBD" android:pathData="M512,160v277.333C512,478.571 478.571,512 437.333,512H74.667C33.429,512 0,478.571 0,437.333V160H512z"/>
+    <path android:fillColor="#37474F" android:pathData="M373.333,42.667h64c5.891,0 10.667,4.776 10.667,10.667v64c0,5.891 -4.776,10.667 -10.667,10.667h-64c-5.891,0 -10.667,-4.776 -10.667,-10.667v-64C362.667,47.442 367.442,42.667 373.333,42.667z"/>
+    <path android:fillColor="#F44336" android:pathData="M53.333,106.667c-5.891,0 -10.667,-4.776 -10.667,-10.667V21.333c0,-5.891 4.776,-10.667 10.667,-10.667S64,15.442 64,21.333V96C64,101.891 59.224,106.667 53.333,106.667z"/>
+    <path android:fillColor="#FFC107" android:pathData="M96,106.667c-5.891,0 -10.667,-4.776 -10.667,-10.667V10.667C85.333,4.776 90.109,0 96,0c5.891,0 10.667,4.776 10.667,10.667V96C106.667,101.891 101.891,106.667 96,106.667z"/>
+    <path android:fillColor="#4CAF50" android:pathData="M138.667,106.667C132.776,106.667 128,101.891 128,96V10.667C128,4.776 132.776,0 138.667,0s10.667,4.776 10.667,10.667V96C149.333,101.891 144.558,106.667 138.667,106.667z"/>
+    <path android:fillColor="#455A64" android:pathData="M256,256m-117.333,0a117.333,117.333 0,1 1,234.666 0a117.333,117.333 0,1 1,-234.666 0"/>
+    <path android:fillColor="#8D6E63" android:pathData="M256,384c-70.692,0 -128,-57.308 -128,-128s57.308,-128 128,-128s128,57.308 128,128C383.918,326.658 326.658,383.918 256,384zM256,149.333c-58.91,0 -106.667,47.756 -106.667,106.667S197.09,362.667 256,362.667S362.667,314.91 362.667,256C362.596,197.119 314.881,149.404 256,149.333z"/>
+    <path android:fillColor="#37474F" android:pathData="M256,256m-64,0a64,64 0,1 1,128 0a64,64 0,1 1,-128 0"/>
 </vector>
