--- a/app/src/main/res/values-night-v23/styles.xml
+++ b/app/src/main/res/values-night-v23/styles.xml
@@ -3,12 +3,14 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">#BB86FC</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="elevationOverlayEnabled">false</item>
+        <item name="android:windowLightStatusBar">false</item>
+
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="elevationOverlayEnabled">true</item>
 
     </style>
 </resources>
