--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -3,11 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">#BB86FC</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="elevationOverlayEnabled">false</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="elevationOverlayEnabled">true</item>
+
     </style>
 
 
@@ -16,7 +18,7 @@
         <item name="android:textSize">@dimen/textViewTextSize</item>
         <item name="android:textStyle">bold</item>
         <item name="fontFamily">@font/muli</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:paddingStart">@dimen/largePadding</item>
         <item name="android:layout_marginTop">@dimen/largeMargin</item>
         <item name="android:layout_marginBottom">@dimen/largeMargin</item>
@@ -28,7 +30,7 @@
         <item name="fontFamily">@font/muli</item>
         <item name="android:background">@null</item>
         <item name="hintTextColor">@color/seperatorLineColor</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:paddingStart">@dimen/largePadding</item>
         <item name="android:layout_marginStart">6dp</item>
         <item name="android:layout_marginEnd">@dimen/largeMargin</item>
@@ -59,20 +61,20 @@
     <style name="AlertDialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
         <item name="android:buttonBarNegativeButtonStyle">@style/negativeButtonStyle</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/positiveButtonStyle</item>
-
+        <item name="android:background">@color/alertDialogColor</item>
     </style>
 
     <style name="positiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="android:layout_marginEnd">20dp</item>
-        <item name="android:backgroundTint">@android:color/holo_red_light</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:backgroundTint">@color/categoriesTextColor</item>
+        <item name="android:textColor">@android:color/black</item>
 <!--        <item name="android:backgroundTint">@android:color/holo_red_light</item>-->
     </style>
 
     <style name="negativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:backgroundTint">@color/cardColor</item>
+        <item name="android:backgroundTint">@color/errorColorNight</item>
     </style>
 
     <style name="aboutTextView">
