Changed app icon Converted a png file to webp

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -96,7 +96,7 @@
                     android:clickable="true"
                     android:fontFamily="@font/muli"
                     android:textSize="16sp"
-                    android:text="Fork this app on Github"/>
+                    android:text="Star and Fork this app on Github"/>
 
 
 
