--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -19,52 +19,53 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rootConstraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/topConstraint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/toolbarColor"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:elevation="10dp"
-                >
-
-
-            <TextView
-                android:id="@+id/appNameTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/largeMargin"
-                android:layout_marginTop="@dimen/largeMargin"
-                android:fontFamily="@font/muli"
-                android:padding="4dp"
-                android:text="@string/app_name"
-                android:textStyle="bold"
-                android:textColor="@color/textColor"
-                android:textSize="21sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <View
-                android:id="@+id/viewSeperator"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:alpha="0.25"
-                android:elevation="8dp"
-                android:layout_marginTop="10dp"
-                android:background="@color/toolbarSeperator"
-                app:layout_constraintTop_toBottomOf="@id/appNameTextView"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <TextView
+                    android:id="@+id/appNameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/largeMargin"
+                    android:layout_marginTop="@dimen/largeMargin"
+                    android:fontFamily="@font/muli"
+                    android:padding="4dp"
+                    android:text="@string/app_name"
+                    android:textColor="@color/textColor"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <View
+                    android:id="@+id/viewSeperator"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="10dp"
+                    android:alpha="0.25"
+                    android:background="@color/toolbarSeperator"
+                    android:elevation="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/appNameTextView" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <fragment
+            <fragment
             android:id="@+id/navHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
@@ -103,6 +104,10 @@
             app:elevation="6dp"
             android:transitionName="shared_element_container"
             app:layout_anchor="@id/appBar" />
+
+
+
+
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
