--- a/app/src/main/res/layout/activity_bucket_add.xml
+++ b/app/src/main/res/layout/activity_bucket_add.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
 
@@ -11,62 +12,112 @@
 
     </data>
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/Coordinatorlayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        >
 
-        <LinearLayout
-            android:id="@+id/rootLinearLayout"
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/mainAppBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/mainBackGroundColor"
-            android:orientation="vertical"
-            tools:context=".ui.activities.BucketAddActivity">
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/largeMargin">
+                android:fitsSystemWindows="true"
+                android:minHeight="180dp"
+                app:collapsedTitleTextAppearance="@style/shrinkedTextAppearance"
+                app:contentScrim="@color/toolbarColor"
+                app:expandedTitleMarginEnd="68dp"
+                app:expandedTitleMarginStart="24dp"
+                app:expandedTitleTextAppearance="@style/expandedTitleTextAppearance"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:scrimAnimationDuration="500"
+                app:title="@string/add_activity_title"
+                app:titleEnabled="true">
 
                 <ImageView
-                    android:id="@+id/backButtonImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginTop="@dimen/smallMargin"
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="256dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/marssunset"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    android:backgroundTint="@color/textColor"
+                    android:elevation="6dp"
+                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                     />
 
 
-                <TextView
-                    style="@style/TextAppearance.AppCompat.Title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:fontFamily="@font/muli"
-                    android:padding="8dp"
-                    android:text="@string/create_bucket"
-                    android:textColor="@color/textColor"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-            </LinearLayout>
-
-            <View
-                android:id="@+id/viewSeperator"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="10dp"
-                android:alpha="0.25"
-                android:background="@color/seperatorLineColor"
-                android:elevation="10dp" />
+        </com.google.android.material.appbar.AppBarLayout>
 
 
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
+
+<!--
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/frameLayout">
+
+
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="180dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/marssunset"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/addPhotoButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:backgroundTint="@android:color/holo_red_light"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:elevation="90dp"
+                            android:text="Add Photo"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintHorizontal_bias="1.6"
+                            />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+-->
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/nameTextView"
@@ -191,6 +242,7 @@
                         android:backgroundTint="@color/buttonBGColor"
                         android:fontFamily="@font/muli"
                         android:padding="12dp"
+                        android:transitionName="shared_element_container"
                         android:text="@string/create_bucket_button"
                         android:textColor="@android:color/white"
                         app:cornerRadius="6dp" />
@@ -198,5 +250,19 @@
 
             </androidx.core.widget.NestedScrollView>
 
-        </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/addPhotoFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/chipBGColor"
+            android:text="Add Photo"
+            android:textColor="@android:color/white"
+            android:src="@drawable/ic_add_white"
+            app:tint="@color/mainBackGroundColor"
+            app:elevation="8dp"
+            app:layout_anchor="@id/mainAppBar"
+            app:layout_anchorGravity="bottom|end"
+            />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
