--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -10,7 +10,6 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
@@ -33,9 +32,12 @@
 
             <ImageView
                 android:id="@+id/bucketsImageView"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:src="@mipmap/ic_bucket_icon"
+                android:layout_marginRight="20dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintRight_toLeftOf="@id/guideline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
