--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">#BB86FC</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
         <item name="android:statusBarColor">@android:color/black</item>
         <item name="elevationOverlayEnabled">true</item>
 
@@ -86,6 +86,22 @@
         <item name="android:layout_gravity">center_horizontal</item>
 
     </style>
+
+    <style name="expandedTitleTextAppearance">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="shrinkedTextAppearance">
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:textSize">@dimen/EditTextSize</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+
+
 
 
 </resources>
