--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         app:cardElevation="4dp"
+        android:padding="@dimen/largePadding"
         android:clickable="true"
         app:cardCornerRadius="5dp">
 
@@ -21,7 +22,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/cardBgColorHome"
-            android:padding="@dimen/largePadding">
+            android:padding="@dimen/largePadding"
+            >
+
+
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
@@ -37,6 +41,7 @@
                 android:src="@mipmap/ic_bucket_icon"
                 android:layout_marginRight="20dp"
                 android:scaleType="centerCrop"
+                android:padding="@dimen/largePadding"
                 app:layout_constraintRight_toLeftOf="@id/guideline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
