--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -65,16 +65,13 @@
     </style>
 
     <style name="positiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:layout_marginEnd">20dp</item>
-        <item name="android:backgroundTint">@color/categoriesTextColor</item>
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@android:color/white</item>
 <!--        <item name="android:backgroundTint">@android:color/holo_red_light</item>-->
     </style>
 
     <style name="negativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
-        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:backgroundTint">@color/errorColorNight</item>
     </style>
 
     <style name="aboutTextView">
